--- a/index.html
+++ b/index.html
@@ -46,12 +46,8 @@
     <div class="container py-5 text-center">
         <h1 class="display-4 font-weight-bold">La légalisation du cannabis</h1>
         <p class="font-italic mb-0">Using simple jumbotron-style component, create a nice Bootstrap 4 header with a background image.</p>
-        <p class="font-italic">Snippe by
-            <a href="https://bootstrapious.com" class="text-white">
-                <u>Bootstrapious</u>
-            </a>
-        </p>
-        <a href="#" role="button" class="d-inline-flex focus-ring py-1 px-2 text-decoration-none border rounded-2 link-light px-5">See All Features</a>
+        <p class="font-italic">Snippe by Bootstrapious</p>
+        <a href="#cards" role="button" class="d-inline-flex focus-ring py-1 px-2 text-decoration-none border rounded-2 link-light px-5">En savoir plus</a>
     </div>
     </div>
 <div>
@@ -68,7 +64,7 @@
     </div>
 
     <!--Cards pour rediriger vers les différents endroits du site-->
-        <div style="margin-top: 2rem; margin-bottom: 2rem; margin-left: 1rem; margin-right: 1rem; opacity: 90%" class="card bg-dark">
+        <div style="margin-top: 2rem; margin-bottom: 2rem; margin-left: 1rem; margin-right: 1rem; opacity: 90%" class="card bg-dark" id="cards">
             <div class="card-body">
                 <div style="padding-left: 1%">
                     <h1 class="display-5 text-light">En savoir plus...</h1>
