--- a/biblio.html
+++ b/biblio.html
@@ -56,14 +56,26 @@
             <h1 class="display-5">Bibliographie</h1>
             <h5 class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor posuere ac ut consequat semper viverra nam libero justo. Orci sagittis eu volutpat odio. Convallis convallis tellus id interdum velit laoreet. Ornare quam viverra orci sagittis eu. Nunc non blandit massa enim. Sed elementum tempus egestas sed sed risus. Mauris ultrices eros in cursus. Egestas dui id ornare arcu. Maecenas accumsan lacus vel facilisis volutpat est.</h5>
             <ul>
-                <li><h6 class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h6></li>
-                <li><h6 class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h6></li>
-                <li><h6 class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h6></li>
-                <li><h6 class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h6></li>
-                <li><h6 class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h6></li>
-                <li><h6 class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h6></li>
-                <li><h6 class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h6></li>
-                <li><h6 class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h6></li>
+                <li><h6 class="text-secondary">À L’Antenne Podcast Radio - Image gratuite sur Pixabay, [sans date]. [en ligne]. Disponible à l’adresse : https://pixabay.com/fr/illustrations/%c3%a0-lantenne-podcast-radio-4901461/ [Consulté le 12 février 2024].
+                    Téléchargez un fichier illustration de À L’Antenne Podcast Radio parmi la vaste bibliothèque d’images, de vidéos et de morceaux de musique libres de droit de Pixabay.
+                </h6></li>
+                <li><h6 class="text-secondary">Débat Rencontre Rendez-Vous - Image gratuite sur Pixabay, [sans date]. [en ligne]. Disponible à l’adresse : https://pixabay.com/fr/illustrations/d%c3%a9bat-rencontre-rendez-vous-e-mail-1993399/ [Consulté le 12 février 2024].
+                Téléchargez un fichier illustration de Débat Rencontre Rendez-Vous parmi la vaste bibliothèque d’images, de vidéos et de morceaux de musique libres de droit de Pixabay.
+                </h6></li>
+                <li><h6 class="text-secondary">Film Projecteur De - Image gratuite sur Pixabay, [sans date]. [en ligne]. Disponible à l’adresse : https://pixabay.com/fr/illustrations/film-projecteur-projecteur-de-film-596009/ [Consulté le 12 février 2024].
+                Téléchargez un fichier illustration de Film Projecteur De parmi la vaste bibliothèque d’images, de vidéos et de morceaux de musique libres de droit de Pixabay.
+                </h6></li>
+                <li><h6 class="text-secondary">Free Photo | Cannabis marijuana leaf closeup, [sans date]. [en ligne]. Disponible à l’adresse : https://www.freepik.com/free-photo/cannabis-marijuana-leaf-closeup_5218098.htm#page=3&query=header%20background%20cannabis&position=13&from_view=search&track=ais&uuid=8fc13ba1-bdb8-44ff-82c0-abe7e1ee7945 [Consulté le 12 février 2024].
+                </h6></li>
+                <li><h6 class="text-secondary">Mindmap Carte Écouter - Image gratuite sur Pixabay, [sans date]. [en ligne]. Disponible à l’adresse : https://pixabay.com/fr/illustrations/mindmap-carte-%c3%a9couter-traiter-4324289/ [Consulté le 12 février 2024].
+                Téléchargez un fichier illustration de Mindmap Carte Écouter parmi la vaste bibliothèque d’images, de vidéos et de morceaux de musique libres de droit de Pixabay.
+                </h6></li>
+                <li><h6 class="text-secondary">Sherlock Holmes Détective - Image gratuite sur Pixabay, [sans date]. [en ligne]. Disponible à l’adresse : https://pixabay.com/fr/illustrations/sherlock-holmes-d%c3%a9tective-chapeau-4445206/ [Consulté le 12 février 2024].
+                Téléchargez un fichier illustration de Sherlock Holmes Détective parmi la vaste bibliothèque d’images, de vidéos et de morceaux de musique libres de droit de Pixabay.
+                </h6></li>
+                <li><h6 class="text-secondary">Un Livre Bureau Lis - Image gratuite sur Pixabay, [sans date]. [en ligne]. Disponible à l’adresse : https://pixabay.com/fr/illustrations/un-livre-bureau-lis-litt%c3%a9rature-8345133/ [Consulté le 12 février 2024].
+                    Téléchargez un fichier illustration de Un Livre Bureau Lis parmi la vaste bibliothèque d’images, de vidéos et de morceaux de musique libres de droit de Pixabay.
+                </h6></li>
             </ul>
         </div>
     </div>
