--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
     <div style="opacity: 90%; margin-left: 1rem; margin-right: 1rem" class="card bg-dark text-light">
         <div class="card-body">
             <div style="padding-left: 1%">
-                <h1 class="display-5 text-light">Introduction</h1>
-                <h5 class="text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor posuere ac ut consequat semper viverra nam libero justo. Orci sagittis eu volutpat odio. Convallis convallis tellus id interdum velit laoreet. Ornare quam viverra orci sagittis eu. Nunc non blandit massa enim. Sed elementum tempus egestas sed sed risus. Mauris ultrices eros in cursus. Egestas dui id ornare arcu. Maecenas accumsan lacus vel facilisis volutpat est.</h5>
-                <h5 class="text-secondary">Egestas pretium aenean pharetra magna ac placerat vestibulum. Natoque penatibus et magnis dis. Sollicitudin aliquam ultrices sagittis orci a scelerisque purus semper. Condimentum id venenatis a condimentum vitae sapien. Ut tristique et egestas quis ipsum suspendisse. Eu nisl nunc mi ipsum. Gravida cum sociis natoque penatibus. Aliquet nec ullamcorper sit amet risus nullam eget. Quam elementum pulvinar etiam non quam lacus suspendisse. A iaculis at erat pellentesque adipiscing commodo elit at. Duis ultricies lacus sed turpis tincidunt id aliquet risus feugiat. Urna cursus eget nunc scelerisque viverra mauris. Netus et malesuada fames ac. Faucibus vitae aliquet nec ullamcorper sit.</h5>
+                <h1 class="display-5 _text">Introduction</h1>
+                <h5 style="color: #D1D1D1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor posuere ac ut consequat semper viverra nam libero justo. Orci sagittis eu volutpat odio. Convallis convallis tellus id interdum velit laoreet. Ornare quam viverra orci sagittis eu. Nunc non blandit massa enim. Sed elementum tempus egestas sed sed risus. Mauris ultrices eros in cursus. Egestas dui id ornare arcu. Maecenas accumsan lacus vel facilisis volutpat est.</h5>
+                <h5 style="color: #D1D1D1;">Egestas pretium aenean pharetra magna ac placerat vestibulum. Natoque penatibus et magnis dis. Sollicitudin aliquam ultrices sagittis orci a scelerisque purus semper. Condimentum id venenatis a condimentum vitae sapien. Ut tristique et egestas quis ipsum suspendisse. Eu nisl nunc mi ipsum. Gravida cum sociis natoque penatibus. Aliquet nec ullamcorper sit amet risus nullam eget. Quam elementum pulvinar etiam non quam lacus suspendisse. A iaculis at erat pellentesque adipiscing commodo elit at. Duis ultricies lacus sed turpis tincidunt id aliquet risus feugiat. Urna cursus eget nunc scelerisque viverra mauris. Netus et malesuada fames ac. Faucibus vitae aliquet nec ullamcorper sit.</h5>
             </div>
         </div>
     </div>
@@ -81,7 +81,7 @@
                     <img src="Images/film-596009_1920.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title display-5">Teaser</h5>
-                        <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p style="color: #D1D1D1" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         <a href="teaser.html" class="btn btn-secondary">Découvrir</a>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
                     <img src="Images/debate-1993399_1920.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title display-5">Controverse</h5>
-                        <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p style="color: #D1D1D1" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         <a href="controverse.html" class="btn btn-secondary">Découvrir</a>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                     <img src="Images/sherlock-4445206_1920.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title display-5">Enquête de terrain</h5>
-                        <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p style="color: #D1D1D1" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         <a href="enqueteterrain.html" class="btn btn-secondary">Découvrir</a>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                     <img src="Images/on-air-4901461_1920.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title display-5">Podcast</h5>
-                        <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p style="color: #D1D1D1" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         <a href="teaser.html" class="btn btn-secondary">Découvrir</a>
                     </div>
                 </div>
@@ -125,7 +125,7 @@
                     <img src="Images/mindmap-4324289_1920.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title display-5">Cartographie</h5>
-                        <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p style="color: #D1D1D1" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         <a href="controverse.html" class="btn btn-secondary">Découvrir</a>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
                     <img src="Images/a-book-8345133_1920.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title display-5">Bibliographie</h5>
-                        <p class="card-text text-secondary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p style="color: #D1D1D1" class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         <a href="enqueteterrain.html" class="btn btn-secondary">Découvrir</a>
                     </div>
                 </div>
