--- a/cartographie.html
+++ b/cartographie.html
@@ -56,7 +56,7 @@
             <h5 style="color: #D1D1D1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor posuere ac ut consequat semper viverra nam libero justo. Orci sagittis eu volutpat odio. Convallis convallis tellus id interdum velit laoreet. Ornare quam viverra orci sagittis eu. Nunc non blandit massa enim. Sed elementum tempus egestas sed sed risus. Mauris ultrices eros in cursus. Egestas dui id ornare arcu. Maecenas accumsan lacus vel facilisis volutpat est.</h5>
         </div>
         <div style="text-align: center">
-            <iframe src="https://embed.kumu.io/0dd9b6f93bdcbf810e11bda9503d207d" width="940" height="600" frameborder="0"></iframe>
+            <iframe class="custom-audio" src="https://embed.kumu.io/0dd9b6f93bdcbf810e11bda9503d207d" width="940" height="600" frameborder="0"></iframe>
         </div>
     </div>
 </div>
