--- a/controverse.html
+++ b/controverse.html
@@ -8,7 +8,7 @@
     <title>Title</title>
 </head>
 
-<body style="background: url('Images/cannabis-marijuana-leaf-closeup.jpg'); background-size: cover; backdrop-filter: blur(10px); font-family: 'ELEGANT TYPEWRITER'">
+<body style="background: url('Images/cannabis-marijuana-leaf-closeup.jpg'); background-size: cover; backdrop-filter: blur(10px);">
 <!--bandeau du site-->
 <nav class="navbar navbar-custom navbar-dark navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
@@ -44,65 +44,102 @@
 <div style="background: url(Images/wepik-export-20240205075337kGnw.png); background-size: cover" class="jumbotron bg-cover text-white">
     <div class="container py-5 text-center">
         <h1 class="display-4 font-weight-bold">La légalisation du cannabis</h1>
-        <p class="font-italic mb-0">Using simple jumbotron-style component, create a nice Bootstrap 4 header with a background image.</p>
-        <p class="font-italic">Snippe by Bootstrapious</p>
         <a href="index.html" role="button" class="d-inline-flex focus-ring py-1 px-2 text-decoration-none border rounded-2 link-light px-5">Retourner à l'accueil</a>
     </div>
 </div>
 
-<div style="margin-left: 1rem; margin-right: 1rem; margin-bottom: 1rem; opacity: 90%" class="card bg-dark text-light mb-4">
+<div style="opacity: 90%" class="card bg-dark text-light mb-4 hmargin5">
     <div class="card-body">
         <div class="px-3">
-            <h1 class="display-5">Controverse</h1>
-            <h5 style="color: #D1D1D1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor posuere ac ut consequat semper viverra nam libero justo. Orci sagittis eu volutpat odio. Convallis convallis tellus id interdum velit laoreet. Ornare quam viverra orci sagittis eu. Nunc non blandit massa enim. Sed elementum tempus egestas sed sed risus. Mauris ultrices eros in cursus. Egestas dui id ornare arcu. Maecenas accumsan lacus vel facilisis volutpat est.</h5>
-        </div>
+            <h1 class="display-5">Explorez les enjeux de notre controverse</h1>
+            </div>
     </div>
 </div>
-<div style="margin-left: 1rem; margin-right: 1rem; margin-bottom: 1rem; opacity: 90%" class="card bg-dark text-light mb-4">
-    <div class="card-body">
-        <div class="px-3">
-            <h1 class="display-6">aaaa</h1>
-            <h5 style="color: #D1D1D1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor posuere ac ut consequat semper viverra nam libero justo. Orci sagittis eu volutpat odio. Convallis convallis tellus id interdum velit laoreet. Ornare quam viverra orci sagittis eu. Nunc non blandit massa enim. Sed elementum tempus egestas sed sed risus. Mauris ultrices eros in cursus. Egestas dui id ornare arcu. Maecenas accumsan lacus vel facilisis volutpat est.</h5>
+
+<div style="margin-top: 1rem; opacity: 90%" class="container text-center">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card bg-dark text-white">
+                <figure>
+                  <img src="Images/politique.jpg" class="card-img-top img-with-credit" alt="...">
+                  <figcaption class="credits"><a href="https://www.freepik.com/free-vector/politicians-talking-having-debates-front-audience-flat-vector-illustration-cartoon-male-public-speakers-standing-rostrum-arguing_10173381.htm#query=politic&position=1&from_view=search&track=sph&uuid=ca566479-6612-4af9-8604-86e012f64a6b">Image by pch.vector</a> on Freepik</figcaption>
+                </figure>
+
+                <div class="card-body">
+                    <h5 class="card-title display-5">Politique</h5>
+                    <a href="" class="btn btn-secondary">En savoir plus</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card bg-dark text-white">
+                <figure>
+                  <img src="Images/politique.jpg" class="card-img-top img-with-credit" alt="...">
+                  <figcaption class="credits"><a href="https://www.freepik.com/free-vector/politicians-talking-having-debates-front-audience-flat-vector-illustration-cartoon-male-public-speakers-standing-rostrum-arguing_10173381.htm#query=politic&position=1&from_view=search&track=sph&uuid=ca566479-6612-4af9-8604-86e012f64a6b">Image by pch.vector</a> on Freepik</figcaption>
+                </figure>
+
+                <div class="card-body">
+                    <h5 class="card-title display-5">Politique</h5>
+                    <a href="" class="btn btn-secondary">En savoir plus</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card bg-dark text-white">
+                <figure>
+                  <img src="Images/politique.jpg" class="card-img-top img-with-credit" alt="...">
+                  <figcaption class="credits"><a href="https://www.freepik.com/free-vector/politicians-talking-having-debates-front-audience-flat-vector-illustration-cartoon-male-public-speakers-standing-rostrum-arguing_10173381.htm#query=politic&position=1&from_view=search&track=sph&uuid=ca566479-6612-4af9-8604-86e012f64a6b">Image by pch.vector</a> on Freepik</figcaption>
+                </figure>
+
+                <div class="card-body">
+                    <h5 class="card-title display-5">Politique</h5>
+                    <a href="" class="btn btn-secondary">En savoir plus</a>
+                </div>
+            </div>
         </div>
     </div>
-</div>
-<div style="margin-left: 1rem; margin-right: 1rem; margin-bottom: 1rem; opacity: 90%" class="card bg-dark text-light mb-4">
-    <div class="card-body">
-        <div class="px-3">
-            <h1 class="display-6">aaaa</h1>
-            <h5 style="color: #D1D1D1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor posuere ac ut consequat semper viverra nam libero justo. Orci sagittis eu volutpat odio. Convallis convallis tellus id interdum velit laoreet. Ornare quam viverra orci sagittis eu. Nunc non blandit massa enim. Sed elementum tempus egestas sed sed risus. Mauris ultrices eros in cursus. Egestas dui id ornare arcu. Maecenas accumsan lacus vel facilisis volutpat est.</h5>
+    <br>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card bg-dark text-white">
+                <figure>
+                  <img src="Images/politique.jpg" class="card-img-top img-with-credit" alt="...">
+                  <figcaption class="credits"><a href="https://www.freepik.com/free-vector/politicians-talking-having-debates-front-audience-flat-vector-illustration-cartoon-male-public-speakers-standing-rostrum-arguing_10173381.htm#query=politic&position=1&from_view=search&track=sph&uuid=ca566479-6612-4af9-8604-86e012f64a6b">Image by pch.vector</a> on Freepik</figcaption>
+                </figure>
+
+                <div class="card-body">
+                    <h5 class="card-title display-5">Politique</h5>
+                    <a href="" class="btn btn-secondary">En savoir plus</a>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
-<div style="margin-left: 1rem; margin-right: 1rem; margin-bottom: 1rem; opacity: 90%" class="card bg-dark text-light mb-4">
-    <div class="card-body">
-        <div class="px-3">
-            <h1 class="display-6">aaaa</h1>
-            <h5 style="color: #D1D1D1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor posuere ac ut consequat semper viverra nam libero justo. Orci sagittis eu volutpat odio. Convallis convallis tellus id interdum velit laoreet. Ornare quam viverra orci sagittis eu. Nunc non blandit massa enim. Sed elementum tempus egestas sed sed risus. Mauris ultrices eros in cursus. Egestas dui id ornare arcu. Maecenas accumsan lacus vel facilisis volutpat est.</h5>
+        <div class="col-md-4">
+            <div class="card bg-dark text-white">
+                <div>
+                <figure>
+                  <img src="Images/politique.jpg" class="card-img-top img-with-credit" alt="...">
+                  <figcaption class="credits"><a href="https://www.freepik.com/free-vector/politicians-talking-having-debates-front-audience-flat-vector-illustration-cartoon-male-public-speakers-standing-rostrum-arguing_10173381.htm#query=politic&position=1&from_view=search&track=sph&uuid=ca566479-6612-4af9-8604-86e012f64a6b">Image by pch.vector</a> on Freepik</figcaption>
+                </figure>
+                </div>
+
+                <div class="card-body">
+                    <h5 class="card-title display-5">Politique</h5>
+                    <a href="" class="btn btn-secondary">En savoir plus</a>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
-<div style="margin-left: 1rem; margin-right: 1rem; margin-bottom: 1rem; opacity: 90%" class="card bg-dark text-light mb-4">
-    <div class="card-body">
-        <div class="px-3">
-            <h1 class="display-6">aaaa</h1>
-            <h5 style="color: #D1D1D1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor posuere ac ut consequat semper viverra nam libero justo. Orci sagittis eu volutpat odio. Convallis convallis tellus id interdum velit laoreet. Ornare quam viverra orci sagittis eu. Nunc non blandit massa enim. Sed elementum tempus egestas sed sed risus. Mauris ultrices eros in cursus. Egestas dui id ornare arcu. Maecenas accumsan lacus vel facilisis volutpat est.</h5>
-        </div>
-    </div>
-</div>
-<div style="margin-left: 1rem; margin-right: 1rem; margin-bottom: 1rem; opacity: 90%" class="card bg-dark text-light mb-4">
-    <div class="card-body">
-        <div class="px-3">
-            <h1 class="display-6">aaaa</h1>
-            <h5 style="color: #D1D1D1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor posuere ac ut consequat semper viverra nam libero justo. Orci sagittis eu volutpat odio. Convallis convallis tellus id interdum velit laoreet. Ornare quam viverra orci sagittis eu. Nunc non blandit massa enim. Sed elementum tempus egestas sed sed risus. Mauris ultrices eros in cursus. Egestas dui id ornare arcu. Maecenas accumsan lacus vel facilisis volutpat est.</h5>
-        </div>
-    </div>
-</div>
-<div style="margin-left: 1rem; margin-right: 1rem; margin-bottom: 1rem; opacity: 90%" class="card bg-dark text-light mb-4">
-    <div class="card-body">
-        <div class="px-3">
-            <h1 class="display-6">aaaa</h1>
-            <h5 style="color: #D1D1D1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor posuere ac ut consequat semper viverra nam libero justo. Orci sagittis eu volutpat odio. Convallis convallis tellus id interdum velit laoreet. Ornare quam viverra orci sagittis eu. Nunc non blandit massa enim. Sed elementum tempus egestas sed sed risus. Mauris ultrices eros in cursus. Egestas dui id ornare arcu. Maecenas accumsan lacus vel facilisis volutpat est.</h5>
+        <div class="col-md-4">
+            <div class="card bg-dark text-white">
+                <figure>
+                  <img src="Images/politique.jpg" class="card-img-top img-with-credit" alt="...">
+                  <figcaption class="credits"><a href="https://www.freepik.com/free-vector/politicians-talking-having-debates-front-audience-flat-vector-illustration-cartoon-male-public-speakers-standing-rostrum-arguing_10173381.htm#query=politic&position=1&from_view=search&track=sph&uuid=ca566479-6612-4af9-8604-86e012f64a6b">Image by pch.vector</a> on Freepik</figcaption>
+                </figure>
+
+                <div class="card-body">
+                    <h5 class="card-title display-5">Politique</h5>
+                    <a href="" class="btn btn-secondary">En savoir plus</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
