--- a/enqueteterrain.html
+++ b/enqueteterrain.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Title</title>
 </head>
-<body style="background: url('Images/cannabis-marijuana-leaf-closeup.jpg'); background-size: cover; backdrop-filter: blur(10px);  font-family: 'ELEGANT TYPEWRITER'">
+<body style="background: url('Images/cannabis-marijuana-leaf-closeup.jpg'); background-size: cover; backdrop-filter: blur(10px);">
 <!--bandeau du site-->
 <nav class="navbar navbar-custom navbar-dark navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
@@ -43,15 +43,13 @@
 <div style="background: url(Images/wepik-export-20240205075337kGnw.png); background-size: cover" class="jumbotron bg-cover text-white">
     <div class="container py-5 text-center">
         <h1 class="display-4 font-weight-bold">La légalisation du cannabis</h1>
-        <p class="font-italic mb-0">Using simple jumbotron-style component, create a nice Bootstrap 4 header with a background image.</p>
-        <p class="font-italic">Snippe by Bootstrapious</p>
         <a href="index.html" role="button" class="d-inline-flex focus-ring py-1 px-2 text-decoration-none border rounded-2 link-light px-5">Retourner à l'accueil</a>
     </div>
 </div>
 
 <!--Retranscription écrite des interviews (interviewé dans le h3 et retranscription après) -->
 
-<div style="margin-left: 1rem; margin-right: 1rem; opacity: 90%" class="card bg-dark text-light mb-4">
+<div style="opacity: 90%" class="card bg-dark text-light mb-4 hmargin5">
     <div class="card-body">
         <div class="px-3">
             <h1 class="display-5">Enquête de terrain</h1>
