--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Le cannabis : Pour ou contre ?</title>
 </head>
-<body style="background: url('Images/cannabis-marijuana-leaf-closeup.jpg'); background-size: cover; backdrop-filter: blur(10px); font-family: 'ELEGANT TYPEWRITER'">
+<body style="background: url('Images/cannabis-marijuana-leaf-closeup.jpg'); background-size: cover; backdrop-filter: blur(10px);">
 
 
     <!--bandeau du site-->
@@ -45,20 +45,23 @@
     <div style="background: url(Images/wepik-export-20240205075337kGnw.png); background-size: cover" class="jumbotron bg-cover text-white _header">
     <div class="container py-5 text-center">
         <h1 class="display-4 font-weight-bold">La légalisation du cannabis</h1>
-        <p class="font-italic mb-0">Using simple jumbotron-style component, create a nice Bootstrap 4 header with a background image.</p>
-        <p class="font-italic">Snippe by Bootstrapious</p>
         <a href="#cards" role="button" class="d-inline-flex focus-ring py-1 px-2 text-decoration-none border rounded-2 link-light px-5">En savoir plus</a>
     </div>
     </div>
-<div>
+<div class="hmargin5">
     <!--Intro du site et présentation de la controverse-->
     <div>
     <div style="opacity: 90%; margin-left: 1rem; margin-right: 1rem" class="card bg-dark text-light">
         <div class="card-body">
             <div style="padding-left: 1%">
                 <h1 class="display-5 _text">Introduction</h1>
-                <h5 style="color: #D1D1D1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor posuere ac ut consequat semper viverra nam libero justo. Orci sagittis eu volutpat odio. Convallis convallis tellus id interdum velit laoreet. Ornare quam viverra orci sagittis eu. Nunc non blandit massa enim. Sed elementum tempus egestas sed sed risus. Mauris ultrices eros in cursus. Egestas dui id ornare arcu. Maecenas accumsan lacus vel facilisis volutpat est.</h5>
-                <h5 style="color: #D1D1D1;">Egestas pretium aenean pharetra magna ac placerat vestibulum. Natoque penatibus et magnis dis. Sollicitudin aliquam ultrices sagittis orci a scelerisque purus semper. Condimentum id venenatis a condimentum vitae sapien. Ut tristique et egestas quis ipsum suspendisse. Eu nisl nunc mi ipsum. Gravida cum sociis natoque penatibus. Aliquet nec ullamcorper sit amet risus nullam eget. Quam elementum pulvinar etiam non quam lacus suspendisse. A iaculis at erat pellentesque adipiscing commodo elit at. Duis ultricies lacus sed turpis tincidunt id aliquet risus feugiat. Urna cursus eget nunc scelerisque viverra mauris. Netus et malesuada fames ac. Faucibus vitae aliquet nec ullamcorper sit.</h5>
+                <p style="font-size: large; text-align: justify">
+                    Bienvenue sur notre site, l'endroit où la controverse rencontre la connaissance, et où les nuances du débat sur le cannabis sont explorées avec passion et objectivité. Dans un monde en constante évolution, la question de la légalisation et de l'utilisation du cannabis suscite des débats animés, mêlant des perspectives médicales, sociales, économiques et culturelles. Que vous soyez un défenseur convaincu, un sceptique intrigué ou simplement curieux des multiples facettes de cette plante controversée, nous vous invitons à plonger dans les profondeurs de la controverse entourant le cannabis. Préparez-vous à découvrir des faits fascinants, à remettre en question vos préjugés et à explorer les différentes dimensions d'un sujet qui continue de diviser et d'intriguer la société moderne. Bienvenue dans le monde complexe du cannabis !
+                    <br><br>
+                    Selon Santé Publique France, le cannabis est et reste de très loin le produit illicite le plus expérimenté en France, près de la moitié des adultes (46%) en ont déjà consommé.
+                    <br><br>
+                    Légaliser le cannabis est une question complexe et controversée qui suscite un débat passionné en France mais aussi à travers le monde. Cette controverse repose sur des arguments diversifiés qui pèsent les avantages potentiels de la réglementation et de la légalisation de cette plante par rapport à ses risques et ses conséquences sur la société et la santé publique. Alors que certains considèrent la légalisation comme une solution aux problèmes liés au marché noir, une source de revenus fiscaux et une opportunité de réglementer la qualité des produits, d'autres craignent une augmentation de la consommation, des risques pour la santé mentale, et des impacts sur la sécurité routière. Ces discussions autour de la légalisation du cannabis reflètent des questions profondément ancrées dans la société, allant de la liberté individuelle à la protection de la santé publique, et elles exigent une réflexion nuancée pour trouver un équilibre entre ces enjeux.
+                </p>
             </div>
         </div>
     </div>
