--- a/teaser.html
+++ b/teaser.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Title</title>
 </head>
-<body style="background: url(Images/wepik-export-20240205075337kGnw.png); background-size: cover; backdrop-filter: blur(10px); font-family: 'ELEGANT TYPEWRITER'">
+<body style="background: url(Images/wepik-export-20240205075337kGnw.png); background-size: cover; backdrop-filter: blur(10px);">
 <!--bandeau du site-->
 <nav class="navbar navbar-custom navbar-dark navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
@@ -43,20 +43,18 @@
 <div style="background: url(Images/wepik-export-20240205075337kGnw.png); background-size: cover" class="jumbotron bg-cover text-white">
     <div class="container py-5 text-center">
         <h1 class="display-4 font-weight-bold">La légalisation du cannabis</h1>
-        <p class="font-italic mb-0">Using simple jumbotron-style component, create a nice Bootstrap 4 header with a background image.</p>
-        <p class="font-italic">Snippe by Bootstrapious</p>
         <a href="index.html" role="button" class="d-inline-flex focus-ring py-1 px-2 text-decoration-none border rounded-2 link-light px-5">Retourner à l'accueil</a>
     </div>
 </div>
 
-<div style="margin-left: 1rem; margin-right: 1rem; margin-bottom: 1rem; opacity: 90%" class="card bg-dark text-light mb-4">
+<div style="opacity: 90%" class="card bg-dark text-light mb-4 hmargin5">
     <div class="card-body">
         <div class="px-3">
             <h1 class="display-5">Teaser</h1>
-            <h5 style="color: #D1D1D1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor posuere ac ut consequat semper viverra nam libero justo. Orci sagittis eu volutpat odio. Convallis convallis tellus id interdum velit laoreet. Ornare quam viverra orci sagittis eu. Nunc non blandit massa enim. Sed elementum tempus egestas sed sed risus. Mauris ultrices eros in cursus. Egestas dui id ornare arcu. Maecenas accumsan lacus vel facilisis volutpat est.</h5>
         </div>
+        <br>
         <div style="text-align: center">
-            <video controls width="1000" class="custom-audio">
+            <video controls width="80%" class="custom-audio">
                 <source src="src/test.mp4">
             </video>
         </div>
