oups j'en ai oublié un

--- a/biblio.html
+++ b/biblio.html
@@ -48,7 +48,7 @@
     </div>
 </div>
 
-<div style="margin-left: 1rem; margin-right: 1rem; margin-bottom: 1rem; opacity: 90%" class="card bg-dark text-light mb-4">
+<div style="opacity: 90%" class="card bg-dark text-light mb-4 hmargin5">
     <div class="card-body">
         <div class="px-3">
             <h1 class="display-5">Bibliographie</h1>
